--- a/src/app/shared/styles/_colors-variables.scss
+++ b/src/app/shared/styles/_colors-variables.scss
@@ -9,6 +9,7 @@ $color-text: #6f5129;
 $color-text-alt: #b6b1e0;
 $color-text-accent: #8784a0;
 $color-text-accent-secondary: #fbf5ab;
+$color-text-hint: #fa4242;
 
 $color-border: #8784a0;
 $color-border-alt: #fbf5ab;
