--- a/src/app/play-page/blocks/window-win/window-win.scss
+++ b/src/app/play-page/blocks/window-win/window-win.scss
@@ -1,14 +1,14 @@
-.modal-window__wrapper {
+.window-win__wrapper {
   padding: 20px 25px;
   background-color: $color-background-accent-primary;
   @include border(2px solid $color-border, 15px);
 
-  .modal-window__title {
+  .window-win__title {
     margin-bottom: 10px;
     @include text-style($font-main-heading, $font-size-header, $color-text);
   }
   
-  .modal-window__text {
+  .window-win__text {
     @include text-style($font-primary-bold, $font-code-bold, $color-text-accent);
     line-height: 35px;
   }
