--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import 'app/shared/styles/typography-variables';
 @import 'app/shared/styles/colors-variables';
 @import 'app/shared/styles/mixins';
+@import 'app/shared/styles/media-mixins';
 @import 'app/shared/styles/base';
 
 @import 'app/play-page//play-page';
