--- a/src/app/play-page/blocks/css-editor/css-editor.scss
+++ b/src/app/play-page/blocks/css-editor/css-editor.scss
@@ -6,6 +6,12 @@
   padding: 4px 10px;
   background-color: $color-background-alt-secondary;
 
+  @include _650 {
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
   .css-editor__form__input {
     padding: 2px;
     width: 80%;
@@ -15,6 +21,13 @@
     background-color: $color-background-alt-secondary;
     @include border(none, 0);
     transition: all 1s;
+
+    @include _1000 {width: 70%;}
+    @include _720 {
+      width: 65%;
+      font-size: 14px;
+    }
+    @include _650 {width: 100%;}
   }
 
   .css-editor__form__input.active {
@@ -24,6 +37,11 @@
 
   .css-editor__form__button {
     @include button($color-background-accent-secondary, $font-code, $font-size-small, $color-text, 2px 15px, 0, 1px solid $color-border, 0 4px 0 $color-border);
+
+    @include _650 {
+      margin-top: 5px;
+      width: 100%;
+    }
   }
 
   .css-editor__form__button.active,
@@ -39,21 +57,37 @@
     width: 100%;
     @include flex(flex, space-between, flex-start);
 
+    @include _650 {
+      flex-direction: column-reverse;
+    }
+
     .css-editor__form__info {
       @include text-style($font-code, $font-size-small, $color-text-accent);
       line-height: 19.9px;
       letter-spacing: 1.5px;
+
+      @include _810 {
+        font-size: 12px;
+      }
+      @include _720 {
+        font-size: 10px;
+      }
     }
 
     .css-editor__form__button--help {
       width: 65.56px;
       margin-top: 10px;
-      color: $color-text-accent
+      color: $color-text-accent;
+
+      @include _650 {
+        margin-bottom: 4px;
+        width: 100%;
+      }
     }
   }
 }
 
 @keyframes blinking {
   from {background-color: $color-background-alt-secondary;}
-  to {background-color: $color-background-accent-secondary;;}
+  to {background-color: $color-background-accent-secondary;}
 }
