fix: fix styles picture loader

--- a/src/app/play-page/blocks/css-room/_css-room.scss
+++ b/src/app/play-page/blocks/css-room/_css-room.scss
@@ -139,7 +139,8 @@
 }
 
 .picture-loader {
-  display: none;
+  position: absolute;
+  top: -500px;
 
   // small animals
   .racoon--small {@include background(url("./assets/img/game-room/racoon--small--active.png"));}
