--- a/src/app/play-page/blocks/css-room/_css-room.scss
+++ b/src/app/play-page/blocks/css-room/_css-room.scss
@@ -140,7 +140,9 @@
 
 .picture-loader {
   position: absolute;
-  top: -500px;
+  top: -6500px;
+  right: -6500px;
+
 
   // small animals
   .racoon--small {@include background(url("./assets/img/game-room/racoon--small--active.png"));}
