--- a/src/app/play-page/blocks/html-viewer/_html-viewer.scss
+++ b/src/app/play-page/blocks/html-viewer/_html-viewer.scss
@@ -5,22 +5,22 @@
   @include text-style($font-code-bold, $font-size-medium, $color-background-accent-primary);
   letter-spacing: 1px;
 
-  @include _650 {
+  @include w_650 {
     padding: 6px 5px;
   }
 
   .HTML-editor__room {
 
-    @include _650 {
+    @include w_650 {
       font-size: 14px;
       margin-top: 3px;
     }
 
-    @include _590 {
+    @include w_590 {
       font-size: 12px;
     }
 
-    @include _540 {
+    @include w_540 {
       margin-top: 7.3px;
       font-size: 10px;
     }
@@ -32,7 +32,7 @@
     margin-top: 0.3px;
     cursor: default;
 
-    @include _650 {
+    @include w_650 {
       margin-top: 3px;
     }
 
@@ -41,17 +41,17 @@
   .htmlRow {
     margin-left: 20px;
 
-    @include _650 {
+    @include w_650 {
       font-size: 14px;
       margin-left: 10px;
     }
 
-    @include _590 {
+    @include w_590 {
       margin-top: 5px;
       font-size: 12px;
     }
 
-    @include _540 {
+    @include w_540 {
       margin-top: 8px;
       font-size: 10px;
     }
@@ -65,7 +65,7 @@
   .htmlRow--child {
     margin-left: 40px;
 
-    @include _650 {
+    @include w_650 {
       margin-left: 20px;
     }
 
