--- a/src/app/shared/styles/_media-mixins.scss
+++ b/src/app/shared/styles/_media-mixins.scss
@@ -1,79 +1,79 @@
-@mixin _1240 {
+@mixin w_1240 {
   @media (max-width: 1240px){
       @content;
   }
 }
-@mixin _1185 {
+@mixin w_1185 {
   @media (max-width: 1185px){
       @content;
   }
 }
-@mixin _1080 {
+@mixin w_1080 {
   @media (max-width: 1080px){
       @content;
   }
 }
-@mixin _1000 {
+@mixin w_1000 {
   @media (max-width: 1000px){
       @content;
   }
 }
-@mixin _925 {
+@mixin w_925 {
   @media (max-width: 925px){
       @content;
   }
 }
-@mixin _865 {
+@mixin w_865 {
   @media (max-width: 865px){
       @content;
   }
 }
-@mixin _810 {
+@mixin w_810 {
   @media (max-width: 810px){
       @content;
   }
 }
-@mixin _765 {
+@mixin w_765 {
   @media (max-width: 765px){
       @content;
   }
 }
-@mixin _720 {
+@mixin w_720 {
   @media (max-width: 720px){
       @content;
   }
 }
-@mixin _685 {
+@mixin w_685 {
   @media (max-width: 685px){
       @content;
   }
 }
-@mixin _650 {
+@mixin w_650 {
   @media (max-width: 650px){
       @content;
   }
 }
-@mixin _620 {
+@mixin w_620 {
   @media (max-width: 620px){
       @content;
   }
 }
-@mixin _590 {
+@mixin w_590 {
   @media (max-width: 590px){
       @content;
   }
 }
-@mixin _565 {
+@mixin w_565 {
   @media (max-width: 565px){
       @content;
   }
 }
-@mixin _540 {
+@mixin w_540 {
   @media (max-width: 540px){
       @content;
   }
 }
-@mixin _520 {
+@mixin w_520 {
   @media (max-width: 520px){
       @content;
   }
