fix: add restriction for viewing the application

--- a/src/app/play-page/blocks/level-bar/_level-bar.scss
+++ b/src/app/play-page/blocks/level-bar/_level-bar.scss
@@ -7,6 +7,10 @@
     z-index: 6;
   }
 
+  @include w_865 {
+    display: none;
+  }
+
   .level-bar__burger-button {
     padding: 5px 60px;
     @include text-style($font-main-heading, $font-size-header, $color-text);
