--- a/src/app/play-page/_play-page.scss
+++ b/src/app/play-page/_play-page.scss
@@ -36,6 +36,10 @@
       width: 100%
     }
 
+    @include w_865 {
+      display: none;
+    }
+
     &-banner {
       @include flex(flex, auto);
 
@@ -93,6 +97,24 @@
   
   .game::-webkit-scrollbar-track {
     background-color: $color-background;
+  }
+}
+
+.mobile-warning {
+  @include text-style($font-code-bold, $font-size-header, $color-text);
+  display: none;
+  text-align: center;
+  background-color: $color-background-alt;
+  position: absolute;
+  width: 100%;
+  height: 100svh;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+
+  @include w_865 {
+    @include flex(flex, center, center);
   }
 }
 
