--- a/src/app/play-page/_play-page.scss
+++ b/src/app/play-page/_play-page.scss
@@ -107,7 +107,7 @@
   background-color: $color-background-alt;
   position: absolute;
   width: 100%;
-  height: 100svh;
+  height: 100vh;
   top: 50%;
   left: 50%;
   margin-right: -50%;
