--- a/src/app/play-page/_play-page.scss
+++ b/src/app/play-page/_play-page.scss
@@ -1,4 +1,6 @@
-* {@include padding-margin(0, 0);}
+* {
+  @include padding-margin(0, 0);
+}
 
 /* Firefox */
 * {
@@ -33,7 +35,7 @@
     scrollbar-color: $color-border $color-background;
 
     @include w_1240 {
-      width: 100%
+      width: 100%;
     }
 
     @include w_865 {
@@ -41,15 +43,31 @@
     }
 
     &-banner {
-      @include flex(flex, auto);
+      @include flex(flex, space-between, center);
+      flex-direction: row-reverse;
+      margin-bottom: 15px;
+      background-color: $color-background-alt-secondary;
+      border-radius: 15px;
+      padding: 10px;
+
+      &__logo {
+        @include flex(flex, auto);
+        margin-right: 10px;
+      }
 
       &__icon {
         @include width-height(30px, 30px);
+        margin-right: 10px;
       }
 
       &__title {
-        margin: 0 0 10px 20px;
         @include text-style($font-main-heading, $font-size-header, $color-text);
+      }
+
+      &__rule {
+        @include text-style($font-code-bold, $color-border, $color-text);
+        margin-left: 15px;
+        letter-spacing: 1px
       }
     }
 
@@ -58,10 +76,12 @@
       @include width-height(100%, 200px);
       margin-bottom: 20px;
       box-sizing: border-box;
-      @include background(url("./assets/img/game-room/room-bg.png"));
+      @include background(url('./assets/img/game-room/room-bg.png'));
       @include border(5px solid $color-border, 15px);
 
-      @include w_765 {height: 150px;}
+      @include w_765 {
+        height: 150px;
+      }
     }
 
     .code-wrapper {
@@ -87,21 +107,21 @@
       @include flex(flex, center, center);
       flex-direction: column;
       text-align: center;
-      @include background(url("./assets/img/win-bg.png"));
+      @include background(url('./assets/img/win-bg.png'));
     }
   }
 
   .game::-webkit-scrollbar {
     background-color: $color-background;
   }
-  
+
   .game::-webkit-scrollbar-track {
     background-color: $color-background;
   }
 }
 
 .mobile-warning {
-  @include text-style($font-code-bold, $font-size-header, $color-text);
+  @include text-style($font-code-bold, $font-size-header, #fff);
   display: none;
   text-align: center;
   background-color: $color-background-alt;
@@ -115,18 +135,31 @@
 
   @include w_865 {
     @include flex(flex, center, center);
+    flex-direction: column;
   }
 
   &__content {
     max-width: 300px;
-    margin: 20px;
+    margin: 10px 20px;
+    letter-spacing: 1.5px;
+    line-height: 1.5;
   }
 }
 
 @keyframes shake {
-  from {transform: translateX(0);}
-  25% {transform: translateX(-5px);}
-  50% {transform: translateX(0);}
-  75% {transform: translateX(5px);}
-  to {transform: translateX(0);}
+  from {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(0);
+  }
+  75% {
+    transform: translateX(5px);
+  }
+  to {
+    transform: translateX(0);
+  }
 }
