fix: add margin-top to banner

--- a/src/app/play-page/_play-page.scss
+++ b/src/app/play-page/_play-page.scss
@@ -50,6 +50,10 @@
       border-radius: 15px;
       padding: 10px;
 
+      @include w_1240 {
+        margin-top: 30px;
+      }
+
       &__logo {
         @include flex(flex, auto);
         margin-right: 10px;
